--- a/src/Web Apps/PanacheSoftware.UI.Client.Blazor/_Imports.razor
+++ b/src/Web Apps/PanacheSoftware.UI.Client.Blazor/_Imports.razor
@@ -9,8 +9,12 @@
 @using PanacheSoftware.UI.Client.Blazor
 @using PanacheSoftware.UI.Client.Blazor.Shared
 @using PanacheSoftware.UI.Client.Blazor.Shared.Navigation
+@using PanacheSoftware.UI.Client.Blazor.Shared.Table
 @using PanacheSoftware.UI.Client.Blazor.Pages.Dashboard
+@using PanacheSoftware.UI.Client.Blazor.Pages.Client
 @using PanacheSoftware.Core.Domain.API.Language
 @using PanacheSoftware.UI.Client.Blazor.Helpers
 @using PanacheSoftware.UI.Client.Blazor.Data
 @using PanacheSoftware.Http
+@using PanacheSoftware.Core.Types
+@using PanacheSoftware.Core.Domain.API
