--- a/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Pages/_Host.cshtml
+++ b/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Pages/_Host.cshtml
@@ -49,6 +49,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>PanacheSoftware.UI.Client.Blazor</title>
+
+    @*<script src="js/jquery.js"></script>*@
+
     <link rel="stylesheet" href="css/bootstrap/bootstrap.css">
     <link rel="stylesheet" href="css/sidebar/jquery.mCustomScrollbar.css">
     <link rel="stylesheet" href="css/fontawesome/all.css">
@@ -64,6 +67,7 @@
     <link rel="stylesheet" href="css/panache/pl-form.css">
     <link rel="stylesheet" href="css/orgchart/jquery.orgchart.min.css">
     <link rel="stylesheet" href="css/panache/pl-orgchart.css">
+
 </head>
 <body>
 
